--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "**/*.{js,jsx,ts,tsx}": "eslint --fix"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "modern-normalize": "^1.0.0",
     "next": "10.1.3",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-query": "^3.13.6",
+    "striptags": "^3.1.1",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
