--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "**/*.{js,jsx,ts,tsx}": "eslint --fix"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-regular-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@reduxjs/toolkit": "^1.5.1",
     "axios": "^0.21.1",
     "modern-normalize": "^1.0.0",
     "next": "10.1.3",
@@ -25,6 +30,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-query": "^3.13.6",
+    "react-redux": "^7.2.3",
     "striptags": "^3.1.1",
     "styled-components": "^5.2.3"
   },
